[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
anyhow = "1.0.81"
thiserror = "1.0.58"
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
orderbook-primitives = { git = "https://github.com/Polkadex-Substrate/Polkadex.git", branch = "Develop" }
polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/Polkadex.git", branch = "Develop" }
rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"] }


[dev-dependencies]
env_logger = "0.11.3"